Add linechart of total value over time
-Includes the datasets of each coin being held
-default to last 100 days 
-defaults to daily
-defaults to dollar

--- a/src/style.css
+++ b/src/style.css
@@ -214,8 +214,16 @@ input {
   width: 400px;
   height: 400px;
   block-size: fit-content;
+  margin: 25px;
 }
 
 .charts {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.mainChart {
+  width: 100%;
+  margin: 0 auto;
 }
