Add table tooltips onhover + refactor gains calculations
The gains calculation is refactored to now take sell transactions into account

--- a/src/style.css
+++ b/src/style.css
@@ -343,7 +343,8 @@ input {
   display: inline;
 }
 
-.table * {
+#assetsTableBody tr td,
+.table tr th {
   /* ToDO: Figure out the optimal padding for ALL tables */
   padding: 5px 10px;
 }
