add missing default styling

--- a/src/style.css
+++ b/src/style.css
@@ -219,6 +219,7 @@ input {
   margin: 0;
   text-align: center;
   display: -webkit-box;
+  line-clamp: 2;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
