--- a/src/style.css
+++ b/src/style.css
@@ -103,25 +103,16 @@ button:hover {
 
 /* The Modal (background) */
 .modal {
-  display: none;
-  /* Hidden by default */
   position: fixed;
-  /* Stay in place */
   z-index: 1;
-  /* Sit on top */
   padding-top: 100px;
-  /* Location of the box */
   left: 0;
   top: 0;
   width: 100%;
-  /* Full width */
   height: 100%;
-  /* Full height */
-  /* overflow: auto; */
-  /* Enable scroll if needed */
-
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(5px);
+  border: none;
 }
 
 /* Modal Content */
